# hdi_plan

./: .gitignore  CMakeLists.txt  README.md  camera.cs  package.xml
include/dynamic_motion_planner/: RRT_node.hpp  chmop.hpp  chmop_cost.hpp  chmop_trajectory.hpp  chomp.hpp  chomp_cost.hpp  chomp_trajectory.hpp  edge.hpp  motion_planner.hpp  node_list.hpp
include/generate_dynamic_scene/: generate_obstacle.hpp  human.hpp  obstacle.hpp
include/path_visualization/: path_visualization.hpp  visualization_markers.hpp
include/publish_trajectory/: publish_trajectory_to_quadrotor.hpp
include/start_quadrotor/: start_quadrotor.hpp
include/utils/: types.hpp  utility_functions.hpp
launch/: check.launch  dynamic_motion_planner.launch  final.launch  main_simulation.launch  no_dynamic_ob.launch  test.launch  test_interface.launch  test_launch.launch  visual.launch  with_dynamic_ob.launch
msg/: obstacle_info.msg
params/: chomp.yaml  motion_planner.yaml  motion_planner_tmp.yaml  start_quadrotor.yaml
src/clock_server/: clock_server.cpp  test1.cpp
src/dynamic_motion_planner/: RRT_node.cpp  chmop.cpp  chmop_cost.cpp  chmop_trajectory.cpp  chomp.cpp  chomp_cost.cpp  chomp_trajectory.cpp  edge.cpp  motion_planner.cpp  motion_planner_node.cpp  node_list.cpp  space.cpp
src/generate_dynamic_scene/: generate_obstacle.cpp  generate_obstacle_node.cpp  human.cpp  obstacle.cpp
src/path_visualization/: path_visualization.cpp  path_visualization_node.cpp  visualization_markers.cpp
src/publish_trajectory/: publish_trajectory_to_quadrotor.cpp  publish_trajectory_to_quadrotor_node.cpp  publish_trajectory_to_quadrotor_tmp.cpp
src/start_quadrotor/: start_quadrotor.cpp  start_quadrotor_node.cpp  test.cpp
